tabby/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tabby-svc
spec:
  selector:
    name: tabby
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ###ZARF_VAR_TABBY_SERVICE_TYPE###
