tabby/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service-tabby
spec:
  exportTo:
  - istio-system
  gateways:
  - istio-system/home
  hosts:
  - tabby.home.kellerhome.us
  http:
  - route:
    - destination:
        host: tabby-svc
        port:
          number: 8080
